2009-09-25  Murray Cumming  <murrayc@murrayc.com>

	Replace some NULLs with 0 because this is C++, not C.

	* glom/libglom/connectionpool_backends/postgres.cc:
	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/spawn_with_feedback.cc: Replace NULLs with 0.

2009-09-24  Murray Cumming  <murrayc@murrayc.com>

	Self-Hosting: Use the new ident configuration for PostgreSQL 8.4.

	* glom/libglom/spawn_with_feedback.[h|cc]: Added an 
	execute_command_line_and_wait() overload that has an output parameter 
	for the stdout from the command.
	* glom/libglom/connectionpool_backends/postgres_self.[h|cc]:
	Added a get_postgresql_utils_version_as_number() utiltity method, 
	and use it in set_network_shared() to use a different syntax for 
	Postgres 8.4, hopefully fixing bug #595608

2009-09-24  Murray Cumming  <murrayc@murrayc.com>

	Self-Hosting: Retry the connection just-long-enough.

	* glom/libglom/connectionpool_backends/postgres.[h|cc]: attempt_connect(): 
	Add a throw() declaration because we know that this really never throws, 
	though other similar methods do.
	* glom/libglom/connectionpool_backends/postgres_self.cc: connect():
	If not network-shared then retry every second when the connection fails, 
	because the (default) password really must be correct. Seems to work, 
	requiring 6 retries on my system. 
	However, we must still wait a hard-coded time to be sure of failure 
	if the password is not the default one, for instance when network sharing.
	* glom/libglom/spawn_with_feedback.cc: 
	execute_command_line_and_wait_until_second_command_returns_success():
	Remove the hacked 8-second wait here. 

2009-09-23  Murray Cumming  <murrayc@murrayc.com>

	Renamed Dialog_Glom to Window_BoxHolder.

	* glom/dialog_glom.[h|cc]: Renamed to window_boxholder.[h|cc] to make 
	its purpose clearer.
	* glom/frame_glom.[h|cc]:
	* glom/mode_data/notebook_data.[h|cc]:
	* Makefile_glom.am: Adapted.

2009-09-22  Murray Cumming  <murrayc@murrayc.com>
