@@ -1,5 +1,16 @@
 2009-09-25  Murray Cumming  <murrayc@murrayc.com>
 
+	Command spawning: Really check the return value.
+
+	* glom/libglom/spawn_with_feedback.cc:
+	execute_command_line_and_wait_until_second_command_returns_success():
+	Actually check the return value of the first command, so we can fail 
+	immediately (with stderr output) when, for instance, postgresql 
+	fails to read the configuration file due to changed options, such as 
+	no longer recognizing max_fsm_pages in PostgreSQL 8.4
+
+2009-09-25  Murray Cumming  <murrayc@murrayc.com>
+
 	Replace some NULLs with 0 because this is C++, not C.
 
 	* glom/libglom/connectionpool_backends/postgres.cc:
